# betoptimiser

./: .gitignore  LICENSE  README.md  pyproject.toml
betoptimiser/: __init__.py  execution.py  models.py  prices.py  solver.py  utils.py
betoptimiser/football/: __init__.py  analysis.py  payouts.py  scanner.py  scenarios.py
betoptimiser/racing/: __init__.py  detection.py  payouts.py  scanner.py  scenarios.py
